new pics carousel

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </a>
             </li>
           </ul>
-          <div class="transparent-button glowingRed"><a href="/#take-a-lesson">Пробное занятие</a></div>
+          <div class="transparent-button glowingRed opacityZero unhidden"><a href="/#take-a-lesson">Пробное занятие</a></div>
         </div>
       </div>
     </div>
@@ -354,7 +354,7 @@
 
           <div class="swiper-slide">
             <div class="img-wrapper">
-              <img src="./assets/JPG/Ресурс 1.jpg" alt="fedorova">
+              <img src="./assets/fedorova.jpg" alt="">
             </div>
             <p>Лилия Федорова</p>
             <div class="lesson-type vocal">
@@ -362,8 +362,8 @@
           </div>
 
           <div class="swiper-slide">
-            <div class="img-wrapper neto">
-              <img src="./assets/JPG/Ресурс 2.jpg" alt="neto">
+            <div class="img-wrapper">
+              <img src="./assets/neto.jpg" alt="">
             </div>
             <p>Антонио Нето</p>
             <div class="lesson-type drums">
@@ -372,7 +372,7 @@
 
           <div class="swiper-slide">
             <div class="img-wrapper">
-              <img src="./assets/JPG/Ресурс 3.jpg" alt="shutova">
+              <img src="./assets/shutova.jpg" alt="">
             </div>
             <p>Ольга Шутова</p>
             <div class="lesson-type vocal">
@@ -382,9 +382,27 @@
 
           <div class="swiper-slide">
             <div class="img-wrapper">
-              <img src="./assets/halembakov.png" alt="halembakov">
+              <img src="./assets/halembakov.jpg" alt="">
             </div>
             <p>Валентин Халембаков</p>
+            <div class="lesson-type guitar">
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="img-wrapper">
+              <img src="./assets/delyanko.jpg" alt="">
+            </div>
+            <p>Александр Делянко</p>
+            <div class="lesson-type guitar">
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="img-wrapper">
+              <img src="./assets/sokolov.jpg" alt="">
+            </div>
+            <p>Олег Соколов</p>
             <div class="lesson-type guitar">
             </div>
           </div>
