added students pics

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
               </a>
             </li>
           </ul>
-          <div class="transparent-button glowingRed opacityZero unhidden"><a href="/#take-a-lesson">Пробное занятие</a></div>
+          <div class="transparent-button glowingRed opacityZero unhidden"><a href="/#take-a-lesson">Пробное занятие</a>
+          </div>
         </div>
       </div>
     </div>
@@ -349,7 +350,7 @@
         <br>
         с многолетним опытом работы на сцене и преподавания
       </p>
-      <div class="swiper mySwiper">
+      <div class="swiper swiper-1">
         <div class="swiper-wrapper">
 
           <div class="swiper-slide">
@@ -445,85 +446,93 @@
       </div>
     </div>
   </section>
-  <!-- <section class="students-pics">
+
+  <section class="students-pics">
     <div class="wrapper">
       <h1>Фото учеников</h1>
-      <div class="swiper mySwiper">
+      <div class="swiper swiper-2">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">Slide 1</div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_1.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_2.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_3.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_4.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_5.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_6.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_7.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_8.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/kids_9.jpg" alt="">
+          </div>
         </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
       </div>
-    </div>
-  </section> -->
-  <!-- <section class="unique-project">
-    <h1>Уникальный
-      <br>
-      молодежный проект
-    </h1>
-    <div class="unique-project__text-container-top">
-      <p>Программа обучения построена на сочетании
-        <br>
-        индивидуальных занятий профильных
-        <br>
-        предметов музыкантов (вокала, гитары,
-        <br>
-        бас-гитары, клавишных, ударных), обязательных
-        <br>
-        для посещения, а также факультативных
-        <br>
-        занятий по слушанию музыки и обсуждению
-        <br>
-        стилей, жанров и направлений.
-        <br>
-        <br>
-        Во время прохождения обучения ежемесячно
-        <br>
-        проводятся мастер-классы с известными
-        <br>
-        российскими музыкантами и онлайн-занятия
-        <br>
-        с мировыми преподавателями по вокалу.
-      </p>
+      <div class="button-container">
+        <div class="red-button glowingRed"><a href="/#take-a-lesson">Пробное занятие</a></div>
+
+      </div>
+  </section>
+
+  <section class="unique-project">
+    <div class="wrapper">
+      <h1 class='white'>Уникальный молодежный проект</h1>
+      <div class="unique-project__text-container-top">
+        <p class="white">Программа обучения построена на сочетании
+          индивидуальных занятий профильных
+          предметов музыкантов (вокала, гитары,
+          бас-гитары, клавишных, ударных), обязательных
+          для посещения, а также факультативных
+          стилей, жанров и направлений.
+          Во время прохождения обучения ежемесячно
+          проводятся мастер-классы с известными
+          российскими музыкантами и онлайн-занятия
+          с мировыми преподавателями по вокалу.
+        </p>
+  
+      </div>
+      <div class="unique-project__text-container-middle">
+        <p class="white">Для выступления ансамблем юные музыканты
+          приобретают необходимые навыки сыгранности,
+          импровизации, смогут потренироваться создавать
+          собственные музыкаль ные произведения
+          и оформлять права на них. У нас постоянно проходят
+          учебные концерты на площадке Продюсерского
+          центра Игоря Сандлера, а также выступления
+          на других известных клубных площадках.
+          Наши группы выступают на самых крупных
+          музыкальных фестивалях г. Москвы на одной сцене
+          с мировыми звездами.
+        </p>
+      </div>
+      <div class="unique-project__text-container-bottom">
+        <p class="white">Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж,
+          получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное
+          продвижение.
+        </p>
+      </div>
+      <div class="unique-project__button-container">
+        <div class="white-button glowingWhite"><a href="/#take-a-lesson">Пробное занятие</a></div>
+      </div>
 
     </div>
-    <div class="unique-project__text-container-middle">
-      <p>Для выступления ансамблем юные музыканты
-        <br>
-        приобретают необходимые навыки сыгранности,
-        <br>
-        импровизации, смогут потренироваться создавать
-        <br>
-        собственные музыкаль ные произведения
-        <br>
-        и оформлять права на них. У нас постоянно проходят
-        <br>
-        учебные концерты на площадке Продюсерского
-        <br>
-        центра Игоря Сандлера, а также выступления
-        <br>
-        на других известных клубных площадках.
-        <br>
-        <br>
-        Наши группы выступают на самых крупных
-        <br>
-        музыкальных фестивалях г. Москвы на одной сцене
-        <br>
-        с мировыми звездами.
-      </p>
-    </div>
-    <div class="unique-project__text-container-bottom">
-      <p>Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж,
-        получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное
-        продвижение.
-      </p>
-    </div>
-    <div class="unique-project__button-container">
-      <div class="white-button"><a href="/#take-a-lesson">Пробное занятие</a></div>
-    </div>
-  </section> -->
+  </section>
   <section class="contacts">
     <div class="wrapper">
       <div class="contacts__container">
