pre final changes

--- a/index.html
+++ b/index.html
@@ -347,8 +347,7 @@
 
       <h1>Педагоги</h1>
       <p>Наши педагоги настоящие мастера своего дела
-        <br>
-        с многолетним опытом работы на сцене и преподавания
+        с многолетним опытом работы на сцене и преподавания:
       </p>
       <div class="swiper swiper-1">
         <div class="swiper-wrapper">
@@ -493,36 +492,51 @@
   <section class="unique-project">
     <div class="wrapper">
       <h1 class='white'>Уникальный молодежный проект</h1>
-      <div class="unique-project__text-container-top">
-        <p class="white">Программа обучения построена на сочетании
-          индивидуальных занятий профильных
-          предметов музыкантов (вокала, гитары,
-          бас-гитары, клавишных, ударных), обязательных
-          для посещения, а также факультативных
-          стилей, жанров и направлений.
-          Во время прохождения обучения ежемесячно
-          проводятся мастер-классы с известными
-          российскими музыкантами и онлайн-занятия
-          с мировыми преподавателями по вокалу.
-        </p>
-  
+      <div class="unique-project__container">
+        <div class="text-container">
+          <p class="white">Программа обучения построена на сочетании
+            индивидуальных занятий профильных
+            предметов музыкантов (вокала, гитары,
+            бас-гитары, клавишных, ударных), обязательных
+            для посещения, а также факультативных
+            стилей, жанров и направлений.
+          </p>
+          <p class="white">
+            Во время прохождения обучения ежемесячно
+            проводятся мастер-классы с известными
+            российскими музыкантами и онлайн-занятия
+            с мировыми преподавателями по вокалу.
+          </p>
+        </div>
+        <div class="img-container">
+          <img src="./assets/dance-hall.png" alt="">
+        </div>
       </div>
-      <div class="unique-project__text-container-middle">
-        <p class="white">Для выступления ансамблем юные музыканты
-          приобретают необходимые навыки сыгранности,
-          импровизации, смогут потренироваться создавать
-          собственные музыкаль ные произведения
-          и оформлять права на них. У нас постоянно проходят
-          учебные концерты на площадке Продюсерского
-          центра Игоря Сандлера, а также выступления
-          на других известных клубных площадках.
-          Наши группы выступают на самых крупных
-          музыкальных фестивалях г. Москвы на одной сцене
-          с мировыми звездами.
-        </p>
+
+      <div class="unique-project__container">
+        <div class="img-container">
+          <img src="./assets/dance-hall.png" alt="">
+        </div>
+        <div class="text-container">
+          <p class="white">Для выступления ансамблем юные музыканты
+            приобретают необходимые навыки сыгранности,
+            импровизации, смогут потренироваться создавать
+            собственные музыкаль ные произведения
+            и оформлять права на них. У нас постоянно проходят
+            учебные концерты на площадке Продюсерского
+            центра Игоря Сандлера, а также выступления
+            на других известных клубных площадках.
+          </p>
+          <p class='white'>
+            Наши группы выступают на самых крупных
+            музыкальных фестивалях г. Москвы на одной сцене
+            с мировыми звездами.
+          </p>
+        </div>
       </div>
-      <div class="unique-project__text-container-bottom">
-        <p class="white">Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж,
+      <div class="unique-project__container-bottom">
+        <p class="white">Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать
+          свой имидж,
           получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное
           продвижение.
         </p>
@@ -638,7 +652,7 @@
         </nav>
 
         <div class="contacts-container">
-          <div class="white-button glowingWhite"><a href="/#take-a-lesson">Обратный звонок</a></div>
+          <div class="transparent-button glowingWhite"><a href="/#take-a-lesson">Обратный звонок</a></div>
           <div class="footer__contacts">
             <div class="number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
             <address>г. Москва, Потаповский пер. 3с1</address>
