--- a/index.html
+++ b/index.html
@@ -572,8 +572,7 @@
           </div>
         </div>
         <div class='yandex-map'><iframe
-            src="https://yandex.ru/map-widget/v1/?ll=37.639213%2C55.763791&mode=search&oid=1220320124&ol=biz&z=16.1"
-            width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+            src="https://yandex.ru/map-widget/v1/?ll=37.639213%2C55.763791&mode=search&oid=1220320124&ol=biz&z=16.1" allowfullscreen="true"></iframe></div>
       </div>
 
     </div>
