--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
       </header>
       <div class="master-class__content">
         <div class="master-class__content__text-container">
-          <!-- <h1 class="white">УНИКАЛЬНЫЕ МАСТЕР-КЛАССЫ ДЛЯ ДЕТЕЙ</h1> -->
-          <h1>УНИКАЛЬНЫЕ МАСТЕР-КЛАССЫ ДЛЯ ДЕТЕЙ</h1>
+          <h1 class="h1 white">УНИКАЛЬНЫЕ МАСТЕР-КЛАССЫ ДЛЯ ДЕТЕЙ</h1>
           <p class="info-text white">Посети мастер-класс в интереснейшем месте Москвы
             и стань профессиональным музыкантом</p>
         </div>
@@ -155,7 +154,7 @@
   <section class="our-courses">
     <div class="wrapper">
       <div class="heading">
-        <h1>НАШИ КУРСЫ</h1>
+        <h1 class="h1">НАШИ КУРСЫ</h1>
         <p>Направления, по которым вы можете пройти мастер-классы:</p>
       </div>
       <div class="our-courses__container">
@@ -176,7 +175,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Акустическая гитара</h2>
+                <h2 class="df-fw white">Акустическая гитара</h2>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -186,7 +185,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Электрогитара</h2>
+                <h2 class="df-fw white">Электрогитара</h2>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -196,7 +195,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Бас гитара</h2>
+                <h2 class="df-fw white">Бас гитара</h2>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -206,7 +205,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Эстрадный вокал</h2>
+                <h2 class="df-fw white">Эстрадный вокал</h2>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -216,7 +215,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Народный вокал</h2>
+                <h2 class="df-fw white">Народный вокал</h2>
                 <div class="button-container">
                   <div class="more"><a href="">Подробнее</a></div>
                 </div>
@@ -228,7 +227,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Рок вокал</h2>
+                <h2 class="df-fw white">Рок вокал</h2>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -238,7 +237,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Академический вокал</h2>
+                <h2 class="df-fw white">Академический вокал</h2>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -248,7 +247,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Ударные</h2>
+                <h2 class="df-fw white">Ударные</h2>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -258,7 +257,7 @@
                 <img src="./assets/AG.png" alt="">
               </div>
               <div class="card-container">
-                <h2>Клавишные</h2>
+                <h2 class="df-fw white">Клавишные</h2>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -272,11 +271,11 @@
       </div>
     </div>
   </section>
-  
+
   <section class="who-we-are">
     <div class="wrapper">
       <div class="container__top">
-        <h1 class="white">КТО МЫ?</h1>
+        <h1 class="h1 white">КТО МЫ?</h1>
         <div class="who-we-are__container-top">
           <div class="who-we-are__container-top__left">
 
@@ -324,7 +323,7 @@
     <div class="wrapper blackout">
       <div class="form">
         <div class="heading">
-          <h1 class="white">Начните обучение с первого урока</h1>
+          <h1 class="h1 white">Начните обучение с первого урока</h1>
         </div>
         <input type="text" placeholder="Имя">
         <input type="text" placeholder="Фамилия">
@@ -343,11 +342,11 @@
       </div>
     </div>
   </section>
-  
+
   <section class="our-teachers">
     <div class="wrapper">
 
-      <h1>Педагоги</h1>
+      <h1 class="h1">Педагоги</h1>
       <p>Наши педагоги настоящие мастера своего дела
         с многолетним опытом работы на сцене и преподавания:
       </p>
@@ -422,7 +421,7 @@
 
   <section class="review">
     <div class="wrapper">
-      <h1 class="white">ОТЗЫВЫ</h1>
+      <h1 class="h1 white">ОТЗЫВЫ</h1>
       <div class="review__content">
         <div class="img-container">
           <img src="./assets/1 (36).jpg" alt="">
@@ -450,7 +449,7 @@
 
   <section class="students-pics">
     <div class="wrapper">
-      <h1>Фото учеников</h1>
+      <h1 class="h1">Фото учеников</h1>
       <div class="swiper swiper-2">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
@@ -489,11 +488,11 @@
         <div class="red-button glowingRed"><a href="/#take-a-lesson">Пробное занятие</a></div>
 
       </div>
-  </section>
+  </section> -->
 
-  <section class="unique-project">
+  <!-- <section class="unique-project">
     <div class="wrapper">
-      <h1 class='white'>Уникальный молодежный проект</h1>
+      <h1 class='h1 white'>Уникальный молодежный проект</h1>
       <div class="unique-project__container">
         <div class="text-container">
           <p class="white">Программа обучения построена на сочетании
@@ -548,13 +547,13 @@
       </div>
 
     </div>
-  </section>
-  <section class="contacts">
+  </section> -->
+  <!-- <section class="contacts">
     <div class="wrapper">
       <div class="contacts__container">
 
         <div class="contacts__container-text">
-          <h1>Контакты</h1>
+          <h1 class="h1">Контакты</h1>
           <p>Мы всегда на связи!</p>
           <div class="logo-container">
             <a href="/"><img src="./assets/logo/full-logo-red.svg" alt=""></a>
@@ -579,8 +578,8 @@
 
     </div>
 
-  </section>
-  <footer class="footer">
+  </section> -->
+  <!-- <footer class="footer">
     <div class="wrapper">
       <div class="footer-container">
 
@@ -662,7 +661,7 @@
 
       </div>
     </div>
-  </footer>
+  </footer> -->
   <script src="./index.js"></script>
 </body>
 
