added pics on cards

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
             <div class="card" data-instrument="guitar">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/acoustic-guitar.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Акустическая гитара</h2>
@@ -182,7 +182,7 @@
 
             <div class="card" data-instrument="guitar">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/electric-guitar.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Электрогитара</h2>
@@ -192,7 +192,7 @@
 
             <div class="card" data-instrument="guitar">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/bass-guitar.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Бас гитара</h2>
@@ -202,7 +202,7 @@
 
             <div class="card" data-instrument="vocal">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/pop-vocal.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Эстрадный вокал</h2>
@@ -212,7 +212,7 @@
 
             <div class="card" data-instrument="vocal">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/folk-vocal.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Народный вокал</h2>
@@ -224,7 +224,7 @@
 
             <div class="card" data-instrument="vocal">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/rock-vocal.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Рок вокал</h2>
@@ -234,7 +234,7 @@
 
             <div class="card" data-instrument="vocal">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/academic-vocal.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Академический вокал</h2>
@@ -244,7 +244,7 @@
 
             <div class="card" data-instrument="drums">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/drums.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Ударные</h2>
@@ -254,7 +254,7 @@
 
             <div class="card" data-instrument="keys">
               <div class="card__img-container">
-                <img src="./assets/AG.png" alt="">
+                <img src="./assets/keys.jpg" alt="">
               </div>
               <div class="card-container">
                 <h2 class="df-fw white">Клавишные</h2>
