--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <img src="./assets/acoustic-guitar.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Акустическая гитара</h2>
+                <h3 class="df-fw white">Акустическая гитара</h3>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -185,7 +185,7 @@
                 <img src="./assets/electric-guitar.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Электрогитара</h2>
+                <h3 class="df-fw white">Электрогитара</h3>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -195,7 +195,7 @@
                 <img src="./assets/bass-guitar.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Бас гитара</h2>
+                <h3 class="df-fw white">Бас гитара</h3>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -205,7 +205,7 @@
                 <img src="./assets/pop-vocal.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Эстрадный вокал</h2>
+                <h3 class="df-fw white">Эстрадный вокал</h3>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -215,7 +215,7 @@
                 <img src="./assets/folk-vocal.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Народный вокал</h2>
+                <h3 class="df-fw white">Народный вокал</h3>
                 <div class="button-container">
                   <div class="more"><a href="">Подробнее</a></div>
                 </div>
@@ -227,7 +227,7 @@
                 <img src="./assets/rock-vocal.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Рок вокал</h2>
+                <h3 class="df-fw white">Рок вокал</h3>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -237,7 +237,7 @@
                 <img src="./assets/academic-vocal.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Академический вокал</h2>
+                <h3 class="df-fw white">Академический вокал</h3>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -247,7 +247,7 @@
                 <img src="./assets/drums.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Ударные</h2>
+                <h3 class="df-fw white">Ударные</h3>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -257,7 +257,7 @@
                 <img src="./assets/keys.jpg" alt="">
               </div>
               <div class="card-container">
-                <h2 class="df-fw white">Клавишные</h2>
+                <h3 class="df-fw white">Клавишные</h3>
                 <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
@@ -278,8 +278,7 @@
         <h1 class="h1 white">КТО МЫ?</h1>
         <div class="who-we-are__container-top">
           <div class="who-we-are__container-top__left">
-
-            <p class="star">
+            <p class="star white">
               Продюсерский центр Игоря Сандлера –
               многофункциональный музыкальный комплекс,
               объединяющий в себе две студии звукозаписи
@@ -289,13 +288,13 @@
             </p>
             <div class="facts-container">
               <div class="facts">
-                <h1 class="black">2011</h1>
-                <p>год открытия продюсерского центра</p>
+                <h1 class="h1 black">2011</h1>
+                <p class="white">год открытия продюсерского центра</p>
               </div>
 
               <div class="facts">
-                <h1 class="black">40 ЛЕТ</h1>
-                <p>в музыкальной индустрии</p>
+                <h1 class="h1 black">40 ЛЕТ</h1>
+                <p class="white">в музыкальной индустрии</p>
               </div>
             </div>
 
@@ -311,9 +310,10 @@
           <img src="./assets/sandler.png" alt="">
         </div>
         <div class="container__bottom__text-container">
-          <h1 class="white">Я всегда шел вместе со всеми, <span class="inner-span">а поперек.</span> И всегда объективно
+          <h2 class="h2 white">Я всегда шел вместе со всеми, <span class="inner-span">а поперек.</span> И всегда
+            объективно
             относился к себе
-          </h1>
+          </h2>
         </div>
       </div>
     </div>
@@ -488,9 +488,9 @@
         <div class="red-button glowingRed"><a href="/#take-a-lesson">Пробное занятие</a></div>
 
       </div>
-  </section> -->
+  </section>
 
-  <!-- <section class="unique-project">
+  <section class="unique-project">
     <div class="wrapper">
       <h1 class='h1 white'>Уникальный молодежный проект</h1>
       <div class="unique-project__container">
@@ -547,8 +547,8 @@
       </div>
 
     </div>
-  </section> -->
-  <!-- <section class="contacts">
+  </section>
+  <section class="contacts">
     <div class="wrapper">
       <div class="contacts__container">
 
@@ -573,13 +573,14 @@
           </div>
         </div>
         <div class='yandex-map'><iframe
-            src="https://yandex.ru/map-widget/v1/?ll=37.639213%2C55.763791&mode=search&oid=1220320124&ol=biz&z=16.1" allowfullscreen="true"></iframe></div>
+            src="https://yandex.ru/map-widget/v1/?ll=37.639213%2C55.763791&mode=search&oid=1220320124&ol=biz&z=16.1"
+            allowfullscreen="true"></iframe></div>
       </div>
 
     </div>
 
-  </section> -->
-  <!-- <footer class="footer">
+  </section>
+  <footer class="footer">
     <div class="wrapper">
       <div class="footer-container">
 
@@ -652,8 +653,8 @@
         </nav>
 
         <div class="contacts-container">
-          <div class="transparent-button glowingWhite"><a href="/#take-a-lesson">Обратный звонок</a></div>
-          <div class="footer__contacts">
+          <div class="black-button glowingRed"><a href="/#take-a-lesson">Обратный звонок</a></div>
+          <div class="header__contacts">
             <div class="number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
             <address>г. Москва, Потаповский пер. 3с1</address>
           </div>
@@ -661,7 +662,7 @@
 
       </div>
     </div>
-  </footer> -->
+  </footer>
   <script src="./index.js"></script>
 </body>
 
