исправил кнопки и ховер на футерном меню

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
                   <path class="cls-1" d="M694.54,220.47h38.11v6.35h-44.46v-44.47h6.35v38.12Z" />
                 </g>
               </svg>
-              <!-- <img src="./assets/logo/full-logo-white.svg" alt="logo"> -->
             </a>
           </div>
 
@@ -566,7 +565,7 @@
             <div class="contacts__number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
             <address>г. Москва, Потаповский пер. 3с1</address>
           </div>
-          <div class="button-container">
+          <div class="button-container jcfs">
             <div class="red-button white glowingRed">
               <a href="/#take-a-lesson">Обратный звонок</a>
             </div>
