tryin to make adaptive font-size

--- a/index.html
+++ b/index.html
@@ -95,14 +95,16 @@
               <address>г. Москва, Потаповский пер. 3с1</address>
             </div>
           </div>
+          <div class="burger-menu">
 
+          </div>
         </div>
       </header>
       <div class="master-class__content">
         <div class="master-class__content__text-container">
-          <h1 class="h1 white">УНИКАЛЬНЫЕ МАСТЕР-КЛАССЫ ДЛЯ ДЕТЕЙ</h1>
-          <p class="info-text white">Посети мастер-класс в интереснейшем месте Москвы
-            и стань профессиональным музыкантом</p>
+          <div class="h1 white">УНИКАЛЬНЫЕ МАСТЕР-КЛАССЫ ДЛЯ ДЕТЕЙ</div>
+          <div class="info-text white">Посети мастер-класс в интереснейшем месте Москвы
+            и стань профессиональным музыкантом</div>
         </div>
 
         <div class="master-class__content__button-container">
